--- a/sponsor.html
+++ b/sponsor.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section once="" class="cid-r9xFcZoGw8" id="footer6-36">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section once="" class="cid-r9xFcZoGw8" id="footer6-36">
 
     
 
