--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section info3 cid-r6vAKye4uP" id="info3-5">
+<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="mbr-section info3 cid-r6vAKye4uP" id="info3-5">
 
     
 
@@ -77,7 +77,7 @@
                 <h3 class="mbr-section-subtitle align-left mbr-light mbr-white pb-3 mbr-fonts-style display-5">Join the 18th HAA Bienniel Convention in Toronto on<strong>&nbsp;&nbsp;<em>July 5, 6</em></strong></h3>
                 <p class="mbr-text align-left mbr-white mbr-fonts-style display-7"><strong>Chinese Cultural Center of Greater Toronto, <a href="https://drive.google.com/open?id=1OG9-s_AvCpSxNfD59qaM_AfLRN03sCPf&usp=sharing" target="_blank">5183 Sheppard Ave E, M1B 5Z5, ON</a></strong></p>
                 <div class="mbr-section-btn align-left py-4"><a class="btn btn-primary display-4" href="register.html#pricing-tables3-2e"><span class="mbrib-cart-add mbr-iconfont mbr-iconfont-btn"></span>REGISTER</a>
-                     <a class="btn btn-secondary display-4" href="index.html#content5-2j"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>SPONSOR</a> <a class="btn btn-white display-4" href="index.html#content5-2k"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span>ACCOMADATION</a></div>
+                     <a class="btn btn-secondary display-4" href="index.html#content5-2j"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>SPONSOR</a> <a class="btn btn-white display-4" href="index.html#content5-2k"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span>ACCOMODATION</a></div>
             </div>
         </div>
     </div>
@@ -1227,7 +1227,7 @@
                     <div data-form-alert="" hidden="">Thanks for contacting us!
 HAA 2019 Team</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hv+8I0swh6tJSYBEfQE9tXm2kYNTJ3rft3BsmAe4z3go8SWs+oZXf5us8JYFrBF4ikoGLURgVZHuXX3Gq35sgRlPRjiAjygcKet0xSULVm1QlQtXj4xkGbTEkatAdKL8">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NzEvmX9xcibHYJcR3GwLb5/K+cClJajw9F9krGtY/orKjcBO4TP/yFqgjCQp+JwiIANSjaIRE92GpVMLTrKkJMBGbj/hIU9ovnCOnZhxvjmSuYoo7+a/UW6mQNHrzvgC">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
