--- a/page2.html
+++ b/page2.html
@@ -55,13 +55,13 @@
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="http://haaconvention.org/register.html"><span class="mbrib-cart-add mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 51, 102);"></span>
                     
-                    REGISTRATION</a></div>
+                    REGISTER</a></div>
         </div>
     </nav>
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/x">css templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
