--- a/register.html
+++ b/register.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section once="" class="cid-r9xFcZoGw8" id="footer6-2b">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="" class="cid-r9xFcZoGw8" id="footer6-2b">
 
     
 
