--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="mbr-section info3 cid-r6vAKye4uP" id="info3-5">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site</a></section><section class="mbr-section info3 cid-r6vAKye4uP" id="info3-5">
 
     
 
@@ -1253,7 +1253,7 @@
                     <div data-form-alert="" hidden="">Thanks for contacting us!
 HAA 2019 Team</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jvt0TxCdf4yKRYtrVIAVu+7cMKxpyHuRMrmcBmxswctUMpcWXVLDeU5mTvVtL+yAieompGu983NcYuANiQJSmPvVuVqdypanUUuE+o0PvJ7+zcFUrbADEClLmerBoyRi">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pzXtfvvs++XipAQs9a1zycAlyNV6epysfJW0LdVsenr2gHGMdrwySOcjxWFSJoF2xQpr0hwqcMyTY298awHBlBK1FmFohq9D8kuEK6kdu0INpEUi3PnhyY5CC+HNEwwQ">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
