--- a/page2.html
+++ b/page2.html
@@ -44,12 +44,12 @@
                          <img src="assets/images/haalogo-v2yellow-372x140.png" alt="" title="" style="height: 4rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-7" href="https://haaconvention.org">Havyaka Association of Americas</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-7" href="http://haaconvention.org">Havyaka Association of Americas</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown open">
-                    <a class="nav-link link dropdown-toggle text-primary display-4" href="https://haaconvention.org" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-info mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>
+                    <a class="nav-link link dropdown-toggle text-primary display-4" href="http://haaconvention.org" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-info mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>
                         
                         Explore 2019 Convention&nbsp;</a><div class="dropdown-menu"><a class="dropdown-item text-primary display-4" href="page2.html#table1-d">Submission Dates</a><a class="dropdown-item text-primary display-4" href="page2.html#content5-21">Youth Program</a><a class="dropdown-item text-primary display-4" href="page2.html#content5-27">Havyaka Exhibition</a><a class="dropdown-item text-primary display-4" href="page2.html#content4-z" aria-expanded="false">Planned Programmes</a><a class="dropdown-item text-primary display-4" href="page2.html#content5-t" aria-expanded="false">Call for Souvenir Article</a><a class="dropdown-item text-primary display-4" href="page2.html#content4-10" aria-expanded="false">Call for Programs</a><a class="text-primary dropdown-item display-4" href="index.html#pricing-tables1-2i" aria-expanded="false">Sponsor</a><a class="text-primary dropdown-item display-4" href="index.html#content5-2r" aria-expanded="false">Picnic</a><a class="text-primary dropdown-item display-4" href="index.html#content5-2k" aria-expanded="false">Accomadation</a><a class="text-primary dropdown-item display-4" href="index.html#content5-2t" aria-expanded="false">Sightseeing Trips</a><a class="text-primary dropdown-item display-4" href="https://www.youtube.com/user/seetorontonow" aria-expanded="false" target="_blank">Explore Toronto</a><a class="text-primary dropdown-item display-4" href="TravelInfo.html" aria-expanded="false">Travel Information</a><a class="text-primary dropdown-item display-4" href="index.html#form1-33" aria-expanded="false">Contact Us</a></div>
                 </li></ul>
@@ -61,7 +61,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
