--- a/index.html
+++ b/index.html
@@ -1163,7 +1163,7 @@
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 10%;">
-            <div class="section-text align-center mbr-fonts-style display-7">Plans are underway to organize two site seeing trips. Please indicate if you would be interested in one or more of these.  More details will be sent to those who are interested. A deposit of $100/couple is required for Trip #1. Balance may be paid when you arrive here.<div>To reserve your seat please e-mail:  <strong>haa2019siteseeing@gmail.com</strong></div></div>
+            <div class="section-text align-center mbr-fonts-style display-7">Plans are underway to organize two site seeing trips. Please indicate if you would be interested in one or more of these.  More details will be sent to those who are interested. A deposit of $100/couple is required for Trip #1. Balance may be paid when you arrive here.<div>To reserve your seat please e-mail:  <strong>haa2019accommodation@gmail.com</strong></div></div>
             <hr class="line" style="width: 10%;">
         </div>
         </div>
