Updated REGISTRATION text

--- a/sponsor.html
+++ b/sponsor.html
@@ -51,7 +51,7 @@
               </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="http://haaconvention.org/register.html"><span class="mbrib-cart-add mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 51, 102);"></span>
 
-                    REGISTER</a></div>
+              REGISTRATION</a></div>
         </div>
     </nav>
 </section>
