--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     HAA Convention 2019</h2>
                 <h3 class="mbr-section-subtitle align-left mbr-light mbr-white pb-3 mbr-fonts-style display-5">Join the 18th HAA Bienniel Convention in Toronto on<strong>&nbsp;&nbsp;<em>July 5, 6</em></strong></h3>
                 <p class="mbr-text align-left mbr-white mbr-fonts-style display-7"><strong>Chinese Cultural Center of Greater Toronto, <a href="https://drive.google.com/open?id=1OG9-s_AvCpSxNfD59qaM_AfLRN03sCPf&usp=sharing" target="_blank">5183 Sheppard Ave E, M1B 5Z5, ON</a></strong></p>
-                <div class="mbr-section-btn align-left py-4"><a class="btn btn-primary display-4" href="register.html#pricing-tables3-2e"><span class="mbrib-cart-add mbr-iconfont mbr-iconfont-btn"></span>REGISTER</a>
+                <div class="mbr-section-btn align-left py-4"><a class="btn btn-primary display-4" href="register.html#pricing-tables3-2e"><span class="mbrib-cart-add mbr-iconfont mbr-iconfont-btn"></span>REGISTRATION</a>
                      <a class="btn btn-secondary display-4" href="index.html#content5-2j"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>SPONSOR</a> <a class="btn btn-white display-4" href="index.html#content5-2k"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span>ACCOMMODATION</a></div>
             </div>
         </div>
