Updated travelinfo with  email address
Updated travelinfo with  email address

--- a/TravelInfo.html
+++ b/TravelInfo.html
@@ -381,7 +381,7 @@
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 10%;">
-            <div class="section-text align-center mbr-fonts-style display-7">Toronto (“Meeting Place” in aboriginal language) is an exciting multi-cultural city of more than 5 million people in Canada just across the border from United States. US residents will find it very attractive, clean, safe, economical (75 cents to the US dollar) and an extension of US with some interesting differences.&nbsp;<br><br>Toronto is one of the most diverse Cities in the world. More than 50% of Toronto population have different ethnic origin.  Many many different neighborhoods thrive and prosper in the Greater Toronto area -India Town(s), China Town(s), Greek Town, Italian, Korean, Farsi etc. East Indians including Sri Lankan, Pakistani and Bangladeshi origin people make up more than 1 million people in GTA.&nbsp;</div>
+            <div class="section-text align-center mbr-fonts-style display-7">Toronto (“Meeting Place” in aboriginal language) is an exciting multi-cultural city of more than 5 million people in Canada just across the border from United States. US residents will find it very attractive, clean, safe, economical (75 cents to the US dollar) and an extension of US with some interesting differences.&nbsp;<br><br>Toronto is one of the most diverse Cities in the world. More than 50% of Toronto population have different ethnic origin.  Many many different neighborhoods thrive and prosper in the Greater Toronto area -India Town(s), China Town(s), Greek Town, Italian, Korean, Farsi etc. Indians including Sri Lankan, Pakistani and Bangladeshi origin people make up more than 1 million people in GTA.&nbsp;</div>
             <hr class="line" style="width: 10%;">
         </div>
         </div>
@@ -397,7 +397,7 @@
                 <h2 class="align-center pb-3 mbr-fonts-style display-5">TORONTO- AN EXCITING MULTI-CULTURAL CITY –YOU NEED TO SEE IT TO BELIEVE IT</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-7"><p><a href="https://tinyurl.com/havyakaaform"></a>Plan to spend atleast a week before or after HAA Convention
 </p><p>For further information contact
-</p><p><strong>haa2019siteseeing@gmail.com</strong>.</p></h3>
+</p><p><strong>haa2019accommodation@gmail.com</strong>.</p></h3>
                 
             </div>
         </div>
