--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                             <li class="list-group-item"><span style="font-size: 1.1rem;">Opportunity to promote business, reach a wide audience all over the US and Canada</span></li><li class="list-group-item"><span style="font-size: 1.1rem;">Souvenir ads: $500/page,&nbsp;</span><span style="font-size: 1.1rem;">Booth during convention: $500,&nbsp;</span><span style="font-size: 1.1rem;">Video Display in lobby: $1,000</span></li><li class="list-group-item"><span style="font-size: 1.1rem;">Mail: haa2019@gmail</span></li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center pt-4"><a href="http://haaconvention.org/sponsor.html" class="btn btn-secondary display-4">SPONSOR</a></div>
+                    <div class="mbr-section-btn text-center pt-4"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=K6E48Z84NLB4C&source=url" class="btn btn-secondary display-4">SPONSOR</a></div>
                 </div>
             </div>
         </div>
