--- a/sponsor.html
+++ b/sponsor.html
@@ -148,7 +148,7 @@
                     SPONSORSHIP DETAILS</a>
             </div>
             <br>
-            <p style="background:#cc2952" class="mbr-text align-center pb-3 mbr-fonts-style display-5"><font size=4 >Contact <strong>haa2019@gmail.com</strong>&nbsp;for custom &nbsp;sponsorships. You can pay online right here or mail/post cheques to:  Bharath Hegde, Treasurer HAA (all tax deductible).</font><br><strong>12 Crestview Drive, Monroe Township, <br>NJ 08831, USA</strong></p>
+            <p style="background:#cc2952" class="mbr-text align-center pb-3 mbr-fonts-style display-5"><font size=4 >Contact <strong>haa2019president@gmail.com</strong>&nbsp;for custom &nbsp;sponsorships. You can pay online right here or mail/post cheques to:  Bharath Hegde, Treasurer HAA (all tax deductible).</font><br><strong>12 Crestview Drive, Monroe Township, <br>NJ 08831, USA</strong></p>
 
         </div>
       </div>
