--- a/index.html
+++ b/index.html
@@ -92,10 +92,9 @@
     <div class="container">
         <div class="media-container-row">
             <div class="col-md-8 align-center">
-                <h3 class="pb-3 mbr-section-title mbr-fonts-style display-2">REGISTER NOW !
-                </h3>
-               <div>Early Bird Deadline:  March 31, 2019</div>
-               <div>Don’t procrastinate !</div>
+                <h4 class="pb-3 mbr-section-title mbr-fonts-style display-2">Register Now ! Early Bird Deadline:  March 31, 2019 Don’t procrastinate !
+                </h4>
+             
             </div>
         </div>
     </div>
