Updated from Prod

--- a/sponsor.html
+++ b/sponsor.html
@@ -51,7 +51,7 @@
               </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="http://haaconvention.org/register.html"><span class="mbrib-cart-add mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 51, 102);"></span>
 
-                    REGISTER</a></div>
+              REGISTRATION</a></div>
         </div>
     </nav>
 </section>
@@ -126,10 +126,10 @@
                 <table>
                 <tr><td><input type="hidden" name="on0" value="Available Sponsorships"><font style="margin-left:13px !important" size=4 color=#ffcc00>Available Sovenir Sponsorships</font></td></tr><tr><td>
                 <select style="margin-left:13px !important" class="form-control form-control-lg" name="os0">
-                  <option value="Front/Back Inside Cover">Front/Back Inside Cover $1,000.00 USD</option>
-                  <option value="Back Cover">Back Cover $1,500.00 USD</option>
-                  <option value="Inside Full Page">Inside Full Page $500.00 USD</option>
-                  <option value="Half Page">Half Page $500.00 USD</option>
+                  <option value="Front/Back Inside Cover">(Sold out)Front/Back Inside Cover $1000 USD</option>
+                  <option value="Back Cover">(Sold out)Back Cover $1500 USD</option>
+                  <option value="Inside Full Page">Inside Full Page $500 USD</option>
+                  <option value="Half Page">Half Page $250 USD</option>
                 </select> </td></tr>
                 <tr><td><input type="hidden" name="on1" value="Note:"><font style="margin-left:13px !important" size=4 color=#ffcc00>Note:</font></td></tr><tr><td>
                   <input style="margin-left:13px !important" class="form-control" type="text" name="os1" maxlength="200"></td></tr>
@@ -148,7 +148,7 @@
                     SPONSORSHIP DETAILS</a>
             </div>
             <br>
-            <p style="background:#cc2952" class="mbr-text align-center pb-3 mbr-fonts-style display-5"><font size=4 >Contact <strong>haa2019@gmail.com</strong>&nbsp;for custom &nbsp;sponsorships. You can pay online right here or mail/post cheques to:  Bharath Hegde, Treasurer HAA (all tax deductible).</font><br><strong>12 Crestview Drive, Monroe Township, <br>NJ 08831, USA</strong></p>
+            <p style="background:#cc2952" class="mbr-text align-center pb-3 mbr-fonts-style display-5"><font size=4 >Contact <strong>haa2019president@gmail.com</strong>&nbsp;for custom &nbsp;sponsorships. You can pay online right here or mail/post cheques to:  Bharath Hegde, Treasurer HAA (all tax deductible).</font><br><strong>12 Crestview Drive, Monroe Township, <br>NJ 08831, USA</strong></p>
 
         </div>
       </div>
