Updated the latest changes

--- a/index.html
+++ b/index.html
@@ -117,7 +117,78 @@
         </div>
     </div>
 </section>
+<section class="carousel slide cid-rkmf5F91Q4" data-interval="false" id="slider2-64">
 
+
+    <div class="container content-slider">
+        <div class="content-slider-wrap">
+            <div>
+                <div class="mbr-slider slide carousel" data-pause="true" data-keyboard="false" data-ride="carousel" data-interval="4000">
+                    <ol class="carousel-indicators">
+                        <li data-app-prevent-settings="" data-target="#slider2-64" data-slide-to="0" class=" active"></li>
+                        <li data-app-prevent-settings="" data-target="#slider2-64" data-slide-to="1"></li>
+                        <li data-app-prevent-settings="" data-target="#slider2-64"  data-slide-to="2"></li>
+                        <li data-app-prevent-settings="" data-target="#slider2-64" data-slide-to="3"></li>
+                        <li data-app-prevent-settings="" data-target="#slider2-64" data-slide-to="4"></li>
+                    </ol>
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/YakshaganaHAA2019Toronto.png);">
+                            <div class="container container-slide">
+                                <div class="image_wrapper">
+                                    <img src="assets/images/YakshaganaHAA2019Toronto.png">
+                                    <div class="carousel-caption justify-content-center">
+                                        <div class="col-10 align-center"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/HAA2019-SugamaSangeeta.png);">
+                            <div class="container container-slide">
+                                <div class="image_wrapper">
+                                    <img src="assets/images/HAA2019-SugamaSangeeta.png">
+                                    <div class="carousel-caption justify-content-center">
+                                        <div class="col-10 align-center"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item slider-fullscreen-image active" data-bg-video-slide="false" style="background-image: url(assets/images/HAA2019-LayaGayanaLaasya.png);">
+                            <div class="container container-slide">
+                                <div class="image_wrapper">
+                                    <img src="assets/images/HAA2019-LayaGayanaLaasya.png">
+                                    <div class="carousel-caption justify-content-center">
+                                        <div class="col-10 align-center"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/HAA2019CanadaEastTour.png);">
+                            <div class="container container-slide">
+                                <div class="image_wrapper">
+                                    <img src="assets/images/HAA2019CanadaEastTour.png">
+                                    <div class="carousel-caption justify-content-center">
+                                        <div class="col-10 align-center"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/Haa2019YouthFocus.png);">
+                            <div class="container container-slide">
+                                <div class="image_wrapper">
+                                    <img src="assets/images/Haa2019YouthFocus.png">
+                                    <div class="carousel-caption justify-content-center">
+                                        <div class="col-10 align-center"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <section class="testimonials2 cid-r9uf0WtZOg mbr-parallax-background" id="testimonials2-11">
 
     
@@ -1353,21 +1424,24 @@ HAA 2019 Team</div>
 </section>
 
 
-  <script src="assets/web/assets/jquery/jquery.min.js"></script>
-  <script src="assets/popper/popper.min.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
-  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
-  
-  <script src="assets/sociallikes/social-likes.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/datatables/jquery.data-tables.min.js"></script>
-  <script src="assets/datatables/data-tables.bootstrap4.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/theme/js/script.js"></script>
-  <script src="assets/formoid/formoid.min.js"></script>
+<script src="assets/web/assets/jquery/jquery.min.js"></script>
+<script src="assets/popper/popper.min.js"></script>
+<script src="assets/tether/tether.min.js"></script>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="assets/dropdown/js/script.min.js"></script>
+<script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+<script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+<script src="assets/sociallikes/social-likes.js"></script>
+<script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
+<script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
+<script src="assets/smoothscroll/smooth-scroll.js"></script>
+<script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
+<script src="assets/parallax/jarallax.min.js"></script>
+<script src="assets/datatables/jquery.data-tables.min.js"></script>
+<script src="assets/datatables/data-tables.bootstrap4.min.js"></script>
+<script src="assets/theme/js/script.js"></script>
+<script src="assets/slidervideo/script.js"></script>
+<script src="assets/formoid/formoid.min.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i></i></a></div>
